fix navbar-collapse on mobile - 2nd attempt

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -392,6 +392,9 @@ header .navbar-default {
   text-shadow: none;
   /**not sure about**/ }
 
+.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
+  max-height: none; }
+
 /* --------------------------------------------------
                   Nav Links
 -------------------------------------------------- */
